brat/test/golden/error/badvec4.brat
v3 :: Vec(Int,3)
v3 = [1,2]
--   ^   ^
--   6   10
